--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,15 +26,17 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    - uses: gradle/gradle-build-action@v2.4.2
+    - uses: gradle/actions/setup-gradle@v3
       with:
         gradle-version: 7.6
-        arguments: build --no-build-cache
+
+    - name: Build with Gradle 7.6
+      run: gradle build
