--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -25,6 +25,10 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 7.6
+
       - name: Run Gradle Command
         run: ./gradlew clean generateLicenseReport
 
