--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           gradle-version: 7.6
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+      # - name: Make gradlew executable
+      #   run: chmod +x ./gradlew
 
       - name: Run Gradle Command
         run: gradle wrapper && ./gradlew clean generateLicenseReport
