--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -26,8 +26,8 @@ jobs:
           distribution: 'adopt'
 
       - uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: 7.6
+        # with:
+        #   gradle-version: 7.6
 
       - name: Run Gradle Command
         run: ./gradlew clean generateLicenseReport
