--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
     - uses: gradle/actions/setup-gradle@v3
       with:
         gradle-version: 7.6
+        arguments: build --no-build-cache
 
-    - name: Build with Gradle 7.6
-      run: gradle build
+    # - name: Build with Gradle 7.6
+    #   run: gradle build
