--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,12 @@ name: "Build repo"
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths-ignore:
       - ".github/**"
       - "**/*.md"
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
     paths-ignore:
       - ".github/**"
       - "**/*.md"
@@ -25,19 +25,16 @@ jobs:
       fail-fast: false
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    - uses: gradle/actions/setup-gradle@v3
-      with:
-        gradle-version: 7.6
-        arguments: build --no-build-cache
-
-    # - name: Build with Gradle 7.6
-    #   run: gradle build
+      - uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 7.6
+          arguments: build --no-build-cache
