--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -32,22 +32,36 @@ jobs:
         env:
           DOCKER_ENABLE_SECURITY: ${{ matrix.enable_security }}
 
-      - name: Upload binaries to release
-        run: zip -r Stirling-PDF${{ matrix.file_suffix }}.exe ./build/launch4j/Stirling-PDF.exe
-      - uses: ncipollo/release-action@v1
+      - name: Create binaries
+        id: artifact-upload-binaries-step
+        uses: actions/upload-artifact@v4
         with:
-          artifacts: Stirling-PDF${{ matrix.file_suffix }}.exe
-          tag: ${{ github.ref }}
-          allowUpdates: true
+          path: ./build/libs/Stirling-PDF.exe
+          name: Stirling-PDF${{ matrix.file_suffix }}.jar
+          overwrite: true
+          if-no-files-found: error
+      - name: Upload binaries to release
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.artifact-upload-binaries-step.outputs.artifact-url }}
+          asset_path: Stirling-PDF.exe
+          overwrite: true
 
       - name: Get version number
         id: versionNumber
         run: echo "versionNumber=$(./gradlew printVersion --quiet | tail -1)" >> $GITHUB_OUTPUT
 
-      - name: Upload jar binaries to release
+      - name: Create jar binaries to release
+        id: artifact-upload-jar-step
         uses: actions/upload-artifact@v4
         with:
           path: ./build/libs/Stirling-PDF-${{ steps.versionNumber.outputs.versionNumber }}.jar
           name: Stirling-PDF${{ matrix.file_suffix }}.jar
           overwrite: true
           if-no-files-found: error
+      - name: Upload binaries to release
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.artifact-upload-jar-step.outputs.artifact-url }}
+          asset_path: Stirling-PDF${{ matrix.file_suffix }}.jar
+          overwrite: true
