--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: ./build/launch4j/Stirling-PDF.exe
-          name: Stirling-PDF${{ matrix.file_suffix }}.jar
+          name: Stirling-PDF${{ matrix.file_suffix }}.exe
           overwrite: true
           if-no-files-found: error
       - name: Upload binaries to release
