--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -48,6 +48,7 @@ jobs:
           name: Stirling-PDF${{ matrix.file_suffix }}.exe
           overwrite: true
           if-no-files-found: error
+      - run: echo "${{ steps.artifact-upload-binaries-step.outputs.artifact-id }}"
       - name: Upload binaries to release
         uses: shogo82148/actions-upload-release-asset@v1
         with:
