--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -32,6 +32,10 @@ jobs:
       - name: Create a Release
         id: create_release
         uses: shogo82148/actions-create-release@v1
+      - uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: assets.txt
 
       - run: echo "${{ steps.create_release.outputs.upload_url }}"
 
