--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -42,7 +42,8 @@ jobs:
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: Stirling-PDF${{ matrix.file_suffix }}.exe
+          asset_path: Stirling-PDF.exe
+          asset_name: Stirling-PDF${{ matrix.file_suffix }}.exe
           overwrite: true
 
 
