--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -42,6 +42,8 @@ jobs:
           if-no-files-found: error
       - run: echo "${{ steps.artifact-upload-binaries-step.outputs.artifact-id }}"
       - run: echo "${{ steps.artifact-upload-binaries-step.outputs.artifact-url }}"
+      - run: ls -R my-artifact
+      - run: ls -R
 
       # - name: Create binaries
       #   id: artifact-upload-binaries-step
