--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: my-artifact${{ matrix.file_suffix }}
-          path: Stirling-PDF${{ matrix.file_suffix }}.exe
+          path: ./build/launch4j/Stirling-PDF.exe
           overwrite: true
           if-no-files-found: error
       - run: echo "${{ steps.artifact-upload-binaries-step.outputs.artifact-id }}"
