--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -31,18 +31,24 @@ jobs:
         run: ./gradlew clean createExe
         env:
           DOCKER_ENABLE_SECURITY: ${{ matrix.enable_security }}
-      - name: Create a Release
-        id: create_release
-        uses: shogo82148/actions-create-release@v1
+
       - name: Upload Assets
         id: artifact-upload-binaries-step
-        uses: shogo82148/actions-upload-release-asset@v1
+        uses: actions/upload-artifact@v4
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_name: my-artifact${{ matrix.file_suffix }}
-          asset_path: ./build/launch4j/Stirling-PDF.exe
+          name: my-artifact${{ matrix.file_suffix }}
+          path: ./build/launch4j/Stirling-PDF.exe
           overwrite: true
+          retention-days: 7
+          if-no-files-found: error
+      - run: echo "${{ steps.artifact-upload-binaries-step.outputs.artifact-id }}"
+      - run: echo "${{ steps.artifact-upload-binaries-step.outputs.artifact-url }}"
+      - run: ls -R my-artifact${{ matrix.file_suffix }}
       - run: ls -R
+      - name: 📤 Upload zip to release
+        uses: softprops/action-gh-release@v0.1.15
+        with:
+          files: ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
 
       # - name: Create binaries
       #   id: artifact-upload-binaries-step
