--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -68,15 +68,10 @@ jobs:
         with:
           files: ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
-
       - name: Upload jar binaries to release
-        uses: svenstaro/upload-release-action@v2
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./build/libs/Stirling-PDF-${{ steps.versionNumber.outputs.versionNumber }}.jar
-          asset_name: Stirling-PDF${{ matrix.file_suffix }}.jar
-          tag: ${{ github.ref }}
-          overwrite: true
+          files: ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.exe
 
       # - name: Create jar binaries to release
       #   id: artifact-upload-jar-step
