--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -66,19 +66,4 @@ jobs:
       - name: Upload jar binaries to release
         uses: softprops/action-gh-release@v2
         with:
-          files: ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.exe
-
-      # - name: Create jar binaries to release
-      #   id: artifact-upload-jar-step
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     path: ./build/libs/Stirling-PDF-${{ steps.versionNumber.outputs.versionNumber }}.jar
-      #     name: Stirling-PDF${{ matrix.file_suffix }}.jar
-      #     overwrite: true
-      #     if-no-files-found: error
-      # - name: Upload binaries to release
-      #   uses: shogo82148/actions-upload-release-asset@v1
-      #   with:
-      #     upload_url: ${{ steps.artifact-upload-jar-step.outputs.artifact-url }}
-      #     asset_path: Stirling-PDF${{ matrix.file_suffix }}.jar
-      #     overwrite: true
+          files: ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
