--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,7 @@
 name: Docker Compose Tests
 
 on:
+  workflow_dispatch:
   pull_request:
     paths:
       - "src/**"
@@ -25,18 +26,14 @@ jobs:
           distribution: "adopt"
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Run Docker Compose Tests
-        run: |
-          chmod +x ./gradlew
+        uses: docker/setup-buildx-action@v3
 
       - name: Get version number
         id: versionNumber
-        run: echo "::set-output name=versionNumber::$(./gradlew printVersion --quiet | tail -1)"
+        run: echo "versionNumber=$(./gradlew printVersion --quiet | tail -1)" >> $GITHUB_OUTPUT
 
       - name: Cache Docker layers
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ steps.versionNumber.outputs.versionNumber }}
@@ -45,10 +42,9 @@ jobs:
 
       - name: Install Docker Compose
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.6.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo curl -SL "https://github.com/docker/compose/releases/download/v2.26.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Run Docker Compose Tests
         run: |
-          chmod +x ./test.sh
           ./test.sh
