--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,10 +35,11 @@ jobs:
       - name: Cache Docker layers
         uses: actions/cache@v4
         with:
-          path: /tmp/.buildx-cache
+          path: ~/.tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ steps.versionNumber.outputs.versionNumber }}
           restore-keys: |
-            ${{ runner.os }}-buildx-${{ steps.versionNumber.outputs.versionNumber }}
+            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-
 
       - name: Install Docker Compose
         run: |
