--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,10 +49,11 @@ jobs:
         run: |
           chmod +x ./test.sh
           ./test.sh
+      - run: ls -la /tmp/
       - name: Move cache
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
         # https://github.com/moby/buildkit/issues/1896
         run: |
           rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache  
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
