--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'build.gradle'
+      - "build.gradle"
 
 permissions:
   contents: write
@@ -22,8 +22,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: "17"
+          distribution: "adopt"
 
       - uses: gradle/actions/setup-gradle@v3
 
@@ -46,7 +46,7 @@ jobs:
 
       - name: Create Pull Request
         if: env.CHANGES_DETECTED == 'true'
-        uses: peter-evans/create-pull-request@v6.0.2
+        uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "Update 3rd Party Licenses"
@@ -60,4 +60,3 @@ jobs:
             [1]: https://github.com/peter-evans/create-pull-request
           draft: false
           delete-branch: true
-
