--- a/.github/workflows/fake_deploy.yml
+++ b/.github/workflows/fake_deploy.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           context: .
           builder: ${{ steps.buildx.outputs.name }}
-          file: .dockerdev/Dockerfile.multi
+          file: Dockerfile
           # Set the desired build target here
           target: deploy
           push: false
