--- a/.github/workflows/fake_deploy.yml
+++ b/.github/workflows/fake_deploy.yml
@@ -1,6 +1,6 @@
 name: Fake deploy with multi-stage Dockerfile
 on:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   fake_deploy_cache_multi:
@@ -33,6 +33,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-multi-buildx
 
+      - name: Get version number
+        id: versionNumber
+        run: echo "versionNumber=$(./gradlew printVersion --quiet | tail -1)" >> $GITHUB_OUTPUT
+
       - name: Build production image
         uses: docker/build-push-action@v5
         with:
@@ -42,11 +46,10 @@ jobs:
           # Set the desired build target here
           push: false
           tags: ${{ steps.prep.outputs.tagged_image }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          # Note the mode=max here
-          # More: https://github.com/moby/buildkit#--export-cache-options
-          # And: https://github.com/docker/buildx#--cache-tonametypetypekeyvalue
-          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
+          platforms: linux/amd64,linux/arm64/v8
 
       - name: Move cache
         run: |
