--- a/.github/workflows/fake_deploy.yml
+++ b/.github/workflows/fake_deploy.yml
@@ -20,9 +20,9 @@ jobs:
         # Use the action from the master, as we've seen some inconsistencies with @v1
         # Issue: https://github.com/docker/build-push-action/issues/286
         uses: docker/setup-buildx-action@v3
-        # It only worked for us with this option on 🤷‍♂️
-        with:
-          install: true
+        # # It only worked for us with this option on 🤷‍♂️
+        # with:
+        #   install: true
 
       - name: Cache Docker layers
         uses: actions/cache@v4
