--- a/.github/workflows/fake_deploy.yml
+++ b/.github/workflows/fake_deploy.yml
@@ -8,6 +8,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
+
       - name: Prepare
         id: prep
         run: |
@@ -17,12 +23,12 @@ jobs:
           echo ::set-output name=tag::${TAG}
       - name: Set up Docker Buildx
         id: buildx
-        # Use the action from the master, as we've seen some inconsistencies with @v1
-        # Issue: https://github.com/docker/build-push-action/issues/286
         uses: docker/setup-buildx-action@v3
-        # # It only worked for us with this option on 🤷‍♂️
-        # with:
-        #   install: true
+
+      - name: Generate jar
+        run: ./gradlew clean createExe
+        env:
+          DOCKER_ENABLE_SECURITY: true
 
       - name: Cache Docker layers
         uses: actions/cache@v4
