--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_API }}
+          logout: false
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -54,6 +55,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
+          logout: false
 
       - name: Convert repository owner to lowercase
         id: repoowner
