--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }}
+          password: ${{ secrets.GITHUB_TOKEN  }}
           logout: false
 
       - name: Convert repository owner to lowercase
