frooodle to ludy87

--- a/exampleYmlFiles/docker-compose-latest-ultra-lite.yml
+++ b/exampleYmlFiles/docker-compose-latest-ultra-lite.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   stirling-pdf:
     container_name: Stirling-PDF-Ultra-Lite
-    image: frooodle/s-pdf:latest-ultra-lite
+    image: ludy87/s-pdf:latest-ultra-lite
     deploy:
       resources:
         limits:
