--- a/chart/stirling-pdf/values.yaml
+++ b/chart/stirling-pdf/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 strategy:
   type: RollingUpdate
 image:
-  repository: frooodle/s-pdf
+  repository: ludy87/s-pdf
   # took Chart appVersion by default
   tag: ~
   pullPolicy: IfNotPresent
