--- a/exampleYmlFiles/docker-compose-latest-security.yml
+++ b/exampleYmlFiles/docker-compose-latest-security.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   stirling-pdf:
     container_name: Stirling-PDF-Security
-    image: frooodle/s-pdf:latest
+    image: ludy87/s-pdf:latest
     deploy:
       resources:
         limits:
