--- a/chart/stirling-pdf/Chart.yaml
+++ b/chart/stirling-pdf/Chart.yaml
@@ -2,15 +2,15 @@ apiVersion: v2
 appVersion: 0.22.8
 description: locally hosted web application that allows you to perform various operations
   on PDF files
-home: https://github.com/Ludy87/Stirling-PDF
+home: https://github.com/Ludy87/test_java
 keywords:
 - stirling-pdf
 - helm
 - charts repo
 maintainers:
 - name: Ludy87
-  url: https://github.com/Ludy87/Stirling-PDF
+  url: https://github.com/Ludy87/test_java
 name: stirling-pdf-chart
 sources:
-- https://github.com/Ludy87/Stirling-PDF
+- https://github.com/Ludy87/test_java
 version: 1.0.0
