--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -62,11 +62,11 @@ jobs:
         run: echo "lowercase=$(echo ${{ github.repository_owner }} | awk '{print tolower($0)}')" >> $GITHUB_OUTPUT
 
       - name: Sanitize repo slug
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         id: repo_slug
         with:
           result-encoding: string
-          script: return 'ghcr.io/${{ github.repository }}'.toLowerCase()
+          script: return 'ghcr.io/${{ github.repository_owner }}/s-pdf'.toLowerCase()
 
       - run: "Result ${{ steps.repo_slug.outputs.result }}"
 
