--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -54,19 +54,12 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN  }}
+          password: ${{ github.token }}
           logout: false
 
       - name: Convert repository owner to lowercase
         id: repoowner
         run: echo "lowercase=$(echo ${{ github.repository_owner }} | awk '{print tolower($0)}')" >> $GITHUB_OUTPUT
-
-      - name: Sanitize repo slug
-        uses: actions/github-script@v7
-        id: repo_slug
-        with:
-          result-encoding: string
-          script: return 'ghcr.io/${{ github.repository_owner }}/s-pdf'.toLowerCase()
 
       - name: Generate tags
         id: meta
@@ -94,8 +87,7 @@ jobs:
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          # tags: ${{ steps.meta.outputs.tags }}
-          tags: ${{ steps.repo_slug.outputs.result }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
