--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -92,8 +92,6 @@ jobs:
           build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
 
-      - run: "echo ${{github.ref}}"
-
       - name: Generate tags ultra-lite
         id: meta2
         uses: docker/metadata-action@v5
@@ -108,7 +106,7 @@ jobs:
 
       - name: Build and push Dockerfile-ultra-lite
         uses: docker/build-push-action@v5
-        if: github.ref != 'refs/heads/main'
+        # if: github.ref != 'refs/heads/main'
         with:
           context: .
           file: ./Dockerfile-ultra-lite
@@ -122,7 +120,7 @@ jobs:
       - name: Generate tags lite
         id: meta3
         uses: docker/metadata-action@v5
-        if: github.ref != 'refs/heads/main'
+        # if: github.ref != 'refs/heads/main'
         with:
           images: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
@@ -133,7 +131,7 @@ jobs:
 
       - name: Build and push Dockerfile-lite
         uses: docker/build-push-action@v5
-        if: github.ref != 'refs/heads/main'
+        # if: github.ref != 'refs/heads/main'
         with:
           context: .
           file: ./Dockerfile-lite
