--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Generate tags ultra-lite
         id: meta2
         uses: docker/metadata-action@v5
-        if: github.ref != 'refs/heads/main'
+        # if: github.ref != 'refs/heads/main'
         with:
           images: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
