--- a/Dockerfile-lite
+++ b/Dockerfile-lite
@@ -1,17 +1,6 @@
 # use alpine
 FROM alpine:3.19.1
 
-ARG VERSION_TAG
-
-# Set Environment Variables
-ENV DOCKER_ENABLE_SECURITY=false \
-    HOME=/home/stirlingpdfuser \
-    VERSION_TAG=$VERSION_TAG \
-    JAVA_TOOL_OPTIONS="$JAVA_TOOL_OPTIONS -XX:MaxRAMPercentage=75" \
-	PUID=1000 \
-    PGID=1000 \
-    UMASK=022
-
 # Copy necessary files
 COPY scripts/download-security-jar.sh /scripts/download-security-jar.sh
 COPY scripts/init-without-ocr.sh /scripts/init-without-ocr.sh
@@ -20,6 +9,20 @@ COPY src/main/resources/static/fonts/*.ttf /usr/share/fonts/opentype/noto
 COPY src/main/resources/static/fonts/*.otf /usr/share/fonts/opentype/noto
 COPY build/libs/*.jar app.jar
 
+ARG VERSION_TAG
+
+
+# Set Environment Variables
+ENV DOCKER_ENABLE_SECURITY=false \
+    VERSION_TAG=$VERSION_TAG \
+    JAVA_TOOL_OPTIONS="$JAVA_TOOL_OPTIONS -XX:MaxRAMPercentage=75" \
+	HOME=/home/stirlingpdfuser \
+	PUID=1000 \
+    PGID=1000 \
+    UMASK=022
+
+
+# JDK for app
 RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /etc/apk/repositories && \
     echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/community" | tee -a /etc/apk/repositories && \
     echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/testing" | tee -a /etc/apk/repositories && \
@@ -29,26 +32,26 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
         tini \
         bash \
         curl \
-        gcc \
         openjdk17-jre \
         su-exec \
+        font-noto-cjk \
         shadow \
 # Doc conversion
-   libreoffice@testing \
+        libreoffice@testing \
 # python and pip
         python3 && \
-        wget https://bootstrap.pypa.io/get-pip.py -qO - | python3 - --break-system-packages --no-cache-dir --upgrade && \
+	wget https://bootstrap.pypa.io/get-pip.py -qO - | python3 - --break-system-packages --no-cache-dir --upgrade && \
 # uno unoconv and HTML
     pip install --break-system-packages --no-cache-dir --upgrade unoconv WeasyPrint && \
 # Set up necessary directories and permissions
-    mkdir -p /configs /logs /customFiles /pipeline/watchedFolders /pipeline/finishedFolders && \
+    mkdir -p $HOME /configs /logs /customFiles /pipeline/watchedFolders /pipeline/finishedFolders && \
 # Set font cache and permissions
     fc-cache -f -v && \
     chmod +x /scripts/*.sh && \
 # User permissions
     addgroup -S stirlingpdfgroup && adduser -S stirlingpdfuser -G stirlingpdfgroup && \
-    chown -R stirlingpdfuser:stirlingpdfgroup $HOME /scripts /usr/share/fonts/opentype/noto  /configs /customFiles /pipeline && \
-    chown stirlingpdfuser:stirlingpdfgroup /app.jar    
+    chown -R stirlingpdfuser:stirlingpdfgroup $HOME /scripts /usr/share/fonts/opentype/noto /configs /customFiles /pipeline && \
+    chown stirlingpdfuser:stirlingpdfgroup /app.jar
 
 
 # Set environment variables
@@ -57,7 +60,7 @@ ENV DOCKER_ENABLE_SECURITY=false
 
 EXPOSE 8080
 
-# Run the application
-
 ENTRYPOINT ["tini", "--", "/scripts/init-without-ocr.sh"]
+
+# Run the application
 CMD ["java", "-Dfile.encoding=UTF-8", "-jar", "/app.jar"]
