--- a/Dockerfile-lite
+++ b/Dockerfile-lite
@@ -27,6 +27,8 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
     echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/community" | tee -a /etc/apk/repositories && \
     echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/testing" | tee -a /etc/apk/repositories && \
     apk add --no-cache \
+        musl \
+        libffi \
         build-base \
         ca-certificates \
         tzdata \
