--- a/Dockerfile-lite
+++ b/Dockerfile-lite
@@ -27,7 +27,7 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
     echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/community" | tee -a /etc/apk/repositories && \
     echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/testing" | tee -a /etc/apk/repositories && \
     apk add --no-cache \
-        musl \
+        musl-dev \
         libffi-dev \
         build-base \
         ca-certificates \
@@ -43,7 +43,7 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
 # Doc conversion
         libreoffice@testing \
 # python and pip
-        python3 && \
+        python3-dev && \
     wget https://bootstrap.pypa.io/get-pip.py -qO - | python3 - --break-system-packages --no-cache-dir --upgrade && \
 # uno unoconv and HTML
     pip install --break-system-packages --no-cache-dir --upgrade unoconv WeasyPrint && \
