--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -145,13 +145,9 @@ jobs:
           labels: ${{ steps.meta3.outputs.labels }}
           build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
-      
-      - name: Delete all containers from package without tags
-        uses: Chizkiyahu/delete-untagged-ghcr-action@v3
-        with:
-            token: ${{ github.token }}
-            repository_owner: ${{ github.repository_owner }}
-            repository: ${{ github.repository }}
-            untagged_only: true
-            owner_type: org # or user
-            except_untagged_multiplatform: true
+
+      - uses: actions/delete-package-versions@v5
+        with: 
+          package-name: 's-pdf'
+          package-type: 'container'
+          delete-only-untagged-versions: 'true'
