--- a/Dockerfile-lite
+++ b/Dockerfile-lite
@@ -1,5 +1,5 @@
 # use alpine
-FROM alpine:20240329
+FROM alpine:3.19.1
 
 # Copy necessary files
 COPY scripts/download-security-jar.sh /scripts/download-security-jar.sh
